# TkLife

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  TODO  cmp_file.py  example.py  menu_spec.py  pyproject.toml  sample_style.yaml  scratch_menu_spec.py  setup.cfg  setup.py  t.py  test.py  todo.txt
.github/workflows/: python-publish.yml
docs/source/: api.rst  conf.py  index.rst
tests/: conftest.py  test_arrange.py  test_command_history.py  test_commands.py  test_controller.py  test_core.py  test_dynamic.py  test_event.py  test_get_grid.py  test_labelled_widgets.py  test_menu.py  test_proxy.py  test_skel.py  test_skeleton.py  test_style.py  test_thread_event_dispatcher.py  test_tklife.py  test_widgets.py
tests/behaviors/: test_commands.py
tests/skel/: test_mapping_TkVars.py
tests/style/: test_style.py
tklife/: __init__.py  __main__.py  arrange.py  behaviors.py  commands.pyi  constants.py  constants.pyi  controller.py  controller.pyi  core.py  dynamic.py  event.py  event.pyi  menu.py  menu.pyi  mixins.py  proxy.py  proxy.pyi  shortcuts.py  simpledialog.py  skel.py  skel.pyi  style.py  widgets.py  widgets.pyi
tklife.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tklife/behaviors/: __init__.py  commands.py  state.py  thread.py
tklife/skel/: common_widgets.py  dummy.py  main.py  widgets.py
tklife/skel/shortcuts/: main.py
tklife/style/: __init__.py  __init__.pyi  helpers.py  style.py  style.pyi
