[metadata]
name = tklife
version = attr: tklife.__version__
author = Cory Laughlin (Aesonus)
author_email = corylcomposinger@gmail.com
description = A package for more organized and elegant tkinter applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aesonus/TkLife
project_urls =
    Bug Tracker = https://github.com/Aesonus/TkLife/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8.5

[options.packages.find]
exclude =
    tests